Code/syntax.output
Terminals unused in grammar

   SPACE


State 29 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier FunDec error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC error RC
   29       | error RC
   30       | LC error

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | Exp error
   41     | RETURN Exp error

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | error SEMI
   46    | Specifier DecList error

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | ID error RP

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 23 28 29 30 39 40 41 45 46 69
INT (258) 20 67
FLOAT (259) 68
PLUS (260) 55
MINUS (261) 56 60
STAR (262) 57
DIV (263) 58
SEMI (264) 4 5 7 8 33 35 39 44 45
COMMA (265) 11 24 48 70
ASSIGNOP (266) 50 51
RELOP (267) 54
AND (268) 52
OR (269) 53
NOT (270) 61
DOT (271) 65
SPACE (272)
ID (273) 16 18 19 21 22 62 63 65 66 69
TYPE (274) 12
RETURN (275) 35 41
STRUCT (276) 14 15
IF (277) 36 37
ELSE (278) 37
WHILE (279) 38
LP (280) 21 22 36 37 38 59 62 63
RP (281) 21 22 23 36 37 38 59 62 63 69
LB (282) 20 64
RB (283) 20 64
LC (284) 14 27 28 30
RC (285) 14 27 28 29
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (36)
    on left: 10 11, on right: 4 11
Specifier (37)
    on left: 12 13, on right: 4 5 6 7 9 26 44 46
StructSpecifier (38)
    on left: 14 15, on right: 13
OptTag (39)
    on left: 16 17, on right: 14
Tag (40)
    on left: 18, on right: 15
VarDec (41)
    on left: 19 20, on right: 10 11 20 26 49 50
FunDec (42)
    on left: 21 22 23, on right: 6 7 9
VarList (43)
    on left: 24 25, on right: 21 24
ParamDec (44)
    on left: 26, on right: 24 25
CompSt (45)
    on left: 27 28 29 30, on right: 6 34
StmtList (46)
    on left: 31 32, on right: 27 31
Stmt (47)
    on left: 33 34 35 36 37 38 39 40 41, on right: 31 36 37 38
DefList (48)
    on left: 42 43, on right: 14 27 42
Def (49)
    on left: 44 45 46, on right: 42
DecList (50)
    on left: 47 48, on right: 44 46 48
Dec (51)
    on left: 49 50, on right: 47 48
Exp (52)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69, on right: 33 35 36 37 38 40 41 50 51 52 53 54 55 56 57 58 59
    60 61 64 65 70 71
Args (53)
    on left: 70 71, on right: 62 70


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    9       | Specifier . FunDec error

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   23 FunDec: error . RP

    RP  shift, and go to state 22


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 10 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI
    9       | Specifier FunDec . error

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

   23 FunDec: error RP .

    $default  reduce using rule 23 (FunDec)


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 35

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 39

    ExtDecList  go to state 40
    VarDec      go to state 19


State 26

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 41


State 27

    9 ExtDef: Specifier FunDec error .
   29 CompSt: error . RC

    RC  shift, and go to state 42

    $default  reduce using rule 9 (ExtDef)


State 28

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 29

   27 CompSt: LC . DefList StmtList RC
   28       | LC . error RC
   30       | LC . error

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   45 Def: error . SEMI

    SEMI  shift, and go to state 45


State 32

   44 Def: Specifier . DecList SEMI
   46    | Specifier . DecList error

    ID  shift, and go to state 39

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 33

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 34

   42 DefList: Def . DefList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 43 (DefList)]
    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 34


State 35

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 36

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 39

    VarDec  go to state 51


State 37

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 38

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 25 (VarList)


State 39

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 40

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 41

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 42

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 43

   28 CompSt: LC error . RC
   30       | LC error .
   45 Def: error . SEMI

    SEMI  shift, and go to state 45
    RC    shift, and go to state 55

    RC        [reduce using rule 30 (CompSt)]
    $default  reduce using rule 30 (CompSt)


State 44

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    ID      shift, and go to state 61
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 29

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 67
    Stmt      go to state 68
    Exp       go to state 69


State 45

   45 Def: error SEMI .

    $default  reduce using rule 45 (Def)


State 46

   20 VarDec: VarDec . LB INT RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 26

    $default  reduce using rule 49 (Dec)


State 47

   44 Def: Specifier DecList . SEMI
   46    | Specifier DecList . error

    error  shift, and go to state 71
    SEMI   shift, and go to state 72


State 48

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 47 (DecList)


State 49

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 50

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 51

   20 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 26 (ParamDec)


State 52

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 38


State 54

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 55

   28 CompSt: LC error RC .

    $default  reduce using rule 28 (CompSt)


State 56

   29 CompSt: error . RC
   39 Stmt: error . SEMI

    SEMI  shift, and go to state 75
    RC    shift, and go to state 42


State 57

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 58

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 59

   60 Exp: MINUS . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    ID     shift, and go to state 61
    LP     shift, and go to state 65

    Exp  go to state 76


State 60

   61 Exp: NOT . Exp

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    ID     shift, and go to state 61
    LP     shift, and go to state 65

    Exp  go to state 77


State 61

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   69    | ID . error RP

    error  shift, and go to state 78
    LP     shift, and go to state 79

    error     [reduce using rule 66 (Exp)]
    PLUS      reduce using rule 66 (Exp)
    MINUS     reduce using rule 66 (Exp)
    STAR      reduce using rule 66 (Exp)
    DIV       reduce using rule 66 (Exp)
    SEMI      reduce using rule 66 (Exp)
    COMMA     reduce using rule 66 (Exp)
    ASSIGNOP  reduce using rule 66 (Exp)
    RELOP     reduce using rule 66 (Exp)
    AND       reduce using rule 66 (Exp)
    OR        reduce using rule 66 (Exp)
    DOT       reduce using rule 66 (Exp)
    RP        reduce using rule 66 (Exp)
    LB        reduce using rule 66 (Exp)
    RB        reduce using rule 66 (Exp)


State 62

   35 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    ID     shift, and go to state 61
    LP     shift, and go to state 65

    Exp  go to state 80


State 63

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 64

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


State 65

   59 Exp: LP . Exp RP

    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    ID     shift, and go to state 61
    LP     shift, and go to state 65

    Exp  go to state 83


State 66

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 67

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 68

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    ID      shift, and go to state 61
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 29

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 66
    StmtList  go to state 85
    Stmt      go to state 68
    Exp       go to state 69


State 69
